# egui-visuals-utility

./: Cargo.toml  README.md
demo-themes/: egui-frappe  egui-latte  egui-mocha  egui-nord
src/: app.rs  main.rs
src/app/: demo_widgets.rs  editor.rs  file_dialog.rs  load_theme.rs  preview.rs  simplified.rs  theme_updater.rs
src/app/editor/: colour.rs  rounding.rs  selection.rs  shadow.rs  stroke.rs  widget_visuals.rs
